# dfu-util-branch

src/: Makefile.am  crc32.c  crc32.h  dfu-version.h  dfu.c  dfu.h  dfu_quirks.c  dfu_quirks.h  dfu_sm.c  dfu_sm.h  dfu_suffix.c  main.c  sam7dfu.c  sam7dfu.h  usb_dfu.c  usb_dfu.h
